minor edits in manifest.json

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "menifest_version": 3,
-    "Version": "1.1",
+    "manifest_version": 3,
+    "version": "1.1",
     "name": "Leads tracker",
     "action": {
         "default_popup":"index.html",
